--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  background-color: white;
+  background-image: url("images/background-dots.png");
+}
+
+#canvas-layout {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .canvas-container {
-  width: 1200px;
-  border: 1px solid black;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  display: flex;
+  box-sizing: border-box;
 }
 
-.left-block {
-  width: 1000px;
-  height: 600px;
-}
-
-.right-block {
-  width: 200px;
-  height: 600px;
-  border-left: 1px solid blue;
-}
-
-.buttons {
-  margin-top: 15px;
-}
-
-.buttons button {
+/* .buttons button {
   display: block;
   margin: 0 auto;
   width: 75%;
@@ -41,20 +44,155 @@
   color: #000000;
   border-color: #fe8800;
   border: 1px solid #000000;
-}
+} */
 
-.system-icons {
+.device-icons {
   width: 75%;
   margin: 0 auto;
 }
 
-.system-icons img {
+.device-icons img {
   width: 60px;
   height: 60px;
 }
 
-.row {
+.device-row {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 20px;
+  margin: 20px 0px;
+}
+
+/*Side Bar*/
+
+:root {
+  --base-clr: #fe8800;
+  --line-clr: #42434a;
+  --hover-clr: #222533;
+  --text-clr: #e6e6ef;
+  --accent-clr: #5e63ff;
+  --secondary-text-clr: #b0b3c1;
+}
+
+html {
+  font-family: Poppins, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5rem;
+}
+body {
+  color: var(--text-clr);
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+#sidebar {
+  box-sizing: border-box;
+  height: 100vh;
+  width: 350px;
+  padding: 5px 1em;
+  background-color: var(--base-clr);
+  border-right: 1px solid var(--line-clr);
+
+  position: sticky;
+  top: 0;
+  align-self: start;
+  transition: 300ms ease-in-out;
+  overflow: hidden;
+  text-wrap: nowrap;
+}
+#sidebar.close {
+  padding: 5px;
+  width: 60px;
+}
+#sidebar ul {
+  list-style: none;
+}
+#sidebar > ul > li:first-child {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px;
+  .logo {
+    font-weight: 600;
+  }
+}
+#sidebar ul li.active a {
+  color: var(--accent-clr);
+
+  svg {
+    fill: var(--accent-clr);
+  }
+}
+
+#sidebar a,
+#sidebar .dropdown-btn,
+#sidebar .logo {
+  border-radius: 0.5em;
+  padding: 0.85em;
+  text-decoration: none;
+  color: var(--text-clr);
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+.dropdown-btn {
+  width: 100%;
+  text-align: left;
+  background: none;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+}
+#sidebar svg {
+  flex-shrink: 0;
+  fill: var(--text-clr);
+}
+#sidebar a span,
+#sidebar .dropdown-btn span {
+  flex-grow: 1;
+}
+#sidebar a:hover,
+#sidebar .dropdown-btn:hover {
+  background-color: var(--hover-clr);
+}
+
+#sidebar .sub-menu {
+  display: grid;
+  grid-template-rows: 0fr;
+  transition: 300ms ease-in-out;
+
+  > div {
+    overflow: hidden;
+  }
+}
+
+#sidebar .sub-menu.show {
+  grid-template-rows: 1fr;
+}
+.dropdown-btn svg {
+  transition: 200ms ease;
+}
+
+.rotate svg:last-child {
+  rotate: 180deg;
+}
+
+#sidebar .sub-menu a {
+  padding-left: 2em;
+}
+
+#toggle-btn {
+  margin-left: auto;
+  padding: 1em;
+  border: none;
+  border-radius: 0.5em;
+  background: none;
+  cursor: pointer;
+
+  svg {
+    transition: rotate 150ms ease;
+  }
+}
+#toggle-btn:hover {
+  background-color: var(--hover-clr);
+}
+
+#sidebar a {
+  cursor: pointer;
 }
